# dashboard-app

./: MANIFEST.in  README.md  pyproject.toml  requirements.txt  setup.cfg  setup.py
dashboardapp/: dash_app.py
dashboardapp/static/: styles.css
dashboardapp/templates/: index.html
pgdata/pgdata/base/1/: pg_internal.init
pgdata/pgdata/base/16384/: pg_internal.init
pgdata/pgdata/base/5/: pg_internal.init
pgdata/pgdata/global/: pg_control  pg_internal.init
pgdata/pgdata/pg_stat/: pgstat.stat
