[metadata]
name = dashboardapp
version = 0.1
author = Chris Francis
description = Dashboard app

[options]
packages = dashboardapp
zip_safe = False
install_requires = Flask
                   pandas
                   plotly
                   psycopg2-binary
include_package_data = True

[options.entry_points]
console_scripts =
    run-app = dashboardapp.dash_app:run_app